--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,0,144,1) 38%, rgba(0,212,255,1) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 240px;
 }
 
 .container {
-    padding: 60px;
-    border: 1px solid #f1f1f1;
+    padding: 60px 60px;
+    border: 1px solid #ffffff;
     border-radius: 10px;
 }
 .container form {
@@ -16,44 +17,73 @@ body {
 }
 
 .container form .title {
+    padding: 20px;
     margin-bottom: 20px;
     border-bottom: 1px solid #f1f1f1;
 }
 
 .container form span {
+    color:#f1f1f1;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 800;
     text-align: center;
 }
 
 form input {
-    margin: 10px;
-    height: 30px;
-    border-radius: 10px;
+    background: none;
     border: none;
-    background-color: #f1f1f1;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.527);
+    outline: none;
+    padding: 15px;
+    text-align: justify;
 }
 
 form .group-accept {
+    font-size: 20px;
+    color:#f1f1f1;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 20px;
 }
 
 form .group-accept label {
-    font-size: 12px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
 }
 
 form input::placeholder {
-    font-size: 12px;
-    text-align: center;
+    color: #f1f1f1;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 
 form button {
-    padding: 10px 40px;
+    margin: 10px;
+    padding: 10px 120px;
     background-color: #25d366;
     border: none;
     color: #FFF;
-    font-weight: 800;
+    font-weight: 700;
     border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.efeito-vidro {
+    background: rgba(255, 255, 255, 0.301);
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+}
+
+@media (max-width: 600px) {
+    
+    body {
+    
+    }
+
+    title {
+        font-size: 50px; 
+    }
 }
